@@ -1,9 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.395 2005/09/29 03:18:58 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.396 2005/09/30 00:12:51 agaffney Exp $
 
 *GLI-0.2 (4 Aug 2005)
+
+  29 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/net/server/gliserv.py:
+  now handles POST requests
+  move majority of request handling code to common_handler() to reduce code
+  duplication
 
   28 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/GLIClientsProfiles.py:
